@@ -2,8 +2,8 @@
 package com.hedera.node.app.blocks.impl.streaming;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.assertj.core.api.Assertions.catchRuntimeException;
-import static org.assertj.core.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyLong;
@@ -24,24 +24,25 @@ import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
 import com.hedera.hapi.block.stream.BlockItem;
-import com.hedera.node.app.blocks.impl.streaming.BlockNodeConnection.ConnectionState;
+import com.hedera.node.app.blocks.impl.streaming.BlockNodeConnection.BlockItemsStreamRequest;
+import com.hedera.node.app.blocks.impl.streaming.BlockNodeConnection.StreamRequest;
+import com.hedera.node.app.blocks.impl.streaming.config.BlockNodeConfiguration;
 import com.hedera.node.app.metrics.BlockStreamMetrics;
 import com.hedera.node.config.ConfigProvider;
-import com.hedera.pbj.grpc.client.helidon.PbjGrpcClientConfig;
 import com.hedera.pbj.runtime.OneOf;
 import com.hedera.pbj.runtime.grpc.GrpcException;
 import com.hedera.pbj.runtime.grpc.GrpcStatus;
 import com.hedera.pbj.runtime.grpc.Pipeline;
-import com.hedera.pbj.runtime.grpc.ServiceInterface.RequestOptions;
-import io.helidon.webclient.api.WebClient;
+import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodHandles.Lookup;
 import java.lang.invoke.VarHandle;
+import java.lang.reflect.Constructor;
+import java.lang.reflect.Method;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Flow;
@@ -78,24 +79,29 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
     private static final Thread FAKE_WORKER_THREAD = new Thread(() -> {}, "fake-worker");
     private static final VarHandle streamingBlockNumberHandle;
     private static final VarHandle workerThreadRefHandle;
+    private static final MethodHandle sendRequestHandle;
 
     static {
         try {
             final Lookup lookup = MethodHandles.lookup();
-            connectionStateHandle = MethodHandles.privateLookupIn(BlockNodeConnection.class, lookup)
-                    .findVarHandle(BlockNodeConnection.class, "connectionState", AtomicReference.class);
+            connectionStateHandle = MethodHandles.privateLookupIn(AbstractBlockNodeConnection.class, lookup)
+                    .findVarHandle(AbstractBlockNodeConnection.class, "stateRef", AtomicReference.class);
             streamingBlockNumberHandle = MethodHandles.privateLookupIn(BlockNodeConnection.class, lookup)
                     .findVarHandle(BlockNodeConnection.class, "streamingBlockNumber", AtomicLong.class);
             workerThreadRefHandle = MethodHandles.privateLookupIn(BlockNodeConnection.class, lookup)
                     .findVarHandle(BlockNodeConnection.class, "workerThreadRef", AtomicReference.class);
+
+            final Method sendRequest = BlockNodeConnection.class.getDeclaredMethod("sendRequest", StreamRequest.class);
+            sendRequest.setAccessible(true);
+            sendRequestHandle = lookup.unreflect(sendRequest);
         } catch (final Exception e) {
             throw new RuntimeException(e);
         }
     }
 
     private BlockNodeConnection connection;
-    private BlockNodeProtocolConfig nodeConfig;
-
+    private ConfigProvider configProvider;
+    private BlockNodeConfiguration nodeConfig;
     private BlockNodeConnectionManager connectionManager;
     private BlockBufferService bufferService;
     private BlockStreamPublishServiceClient grpcServiceClient;
@@ -106,10 +112,12 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
     private BlockNodeStats.HighLatencyResult latencyResult;
     private BlockNodeClientFactory clientFactory;
 
+    private ExecutorService realExecutor;
+
     @BeforeEach
     @SuppressWarnings("unchecked")
     void beforeEach() throws Exception {
-        final ConfigProvider configProvider = createConfigProvider(createDefaultConfigProvider());
+        configProvider = createConfigProvider(createDefaultConfigProvider());
         nodeConfig = newBlockNodeConfig(8080, 1);
         connectionManager = mock(BlockNodeConnectionManager.class);
         bufferService = mock(BlockBufferService.class);
@@ -123,10 +131,10 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         // Set up default behavior for pipelineExecutor using a real executor
         // This ensures proper Future semantics while still being fast for tests
         // Individual tests can override this with their own specific mocks for timeout scenarios
-        final ExecutorService realExecutor = Executors.newCachedThreadPool();
+        realExecutor = Executors.newCachedThreadPool();
         lenient()
                 .doAnswer(invocation -> {
-                    Runnable runnable = invocation.getArgument(0);
+                    final Runnable runnable = invocation.getArgument(0);
                     return realExecutor.submit(runnable);
                 })
                 .when(pipelineExecutor)
@@ -143,8 +151,8 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
         lenient()
                 .doAnswer(invocation -> {
-                    long timeout = invocation.getArgument(0);
-                    TimeUnit unit = invocation.getArgument(1);
+                    final long timeout = invocation.getArgument(0);
+                    final TimeUnit unit = invocation.getArgument(1);
                     return realExecutor.awaitTermination(timeout, unit);
                 })
                 .when(pipelineExecutor)
@@ -154,7 +162,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         lenient()
                 .doReturn(grpcServiceClient)
                 .when(clientFactory)
-                .createClient(any(WebClient.class), any(PbjGrpcClientConfig.class), any(RequestOptions.class));
+                .createStreamingClient(any(BlockNodeConfiguration.class), any(Duration.class));
         connection = new BlockNodeConnection(
                 configProvider,
                 nodeConfig,
@@ -176,41 +184,36 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
     @AfterEach
     void afterEach() throws Exception {
+        if (realExecutor != null) {
+            realExecutor.shutdownNow();
+        }
+
         // set the connection to closed so the worker thread stops gracefully
         connection.updateConnectionState(ConnectionState.CLOSED);
         final AtomicReference<Thread> workerThreadRef = workerThreadRef();
 
-        for (int i = 0; i < 5; ++i) {
-            final Thread workerThread = workerThreadRef.get();
-            if (workerThread == null || workerThread.equals(FAKE_WORKER_THREAD)) {
-                break;
-            }
-
-            Thread.sleep(50);
-        }
-
+        // Wait for worker thread to terminate
         final Thread workerThread = workerThreadRef.get();
         if (workerThread != null && !workerThread.equals(FAKE_WORKER_THREAD)) {
-            fail("Connection worker thread did not get cleaned up");
+            assertThat(workerThread.join(Duration.ofSeconds(2))).isTrue();
         }
     }
 
     @Test
-    void testCreateRequestPipeline() {
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.UNINITIALIZED);
+    void testInitialize() {
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.UNINITIALIZED);
 
-        connection.createRequestPipeline();
+        connection.initialize();
 
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.PENDING);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.READY);
         verify(grpcServiceClient).publishBlockStream(connection);
-        verify(clientFactory)
-                .createClient(any(WebClient.class), any(PbjGrpcClientConfig.class), any(RequestOptions.class));
+        verify(clientFactory).createStreamingClient(any(BlockNodeConfiguration.class), any(Duration.class));
     }
 
     @Test
-    void testCreateRequestPipeline_alreadyExists() {
-        connection.createRequestPipeline();
-        connection.createRequestPipeline();
+    void testInitialize_alreadyExists() {
+        connection.initialize();
+        connection.initialize();
 
         verify(grpcServiceClient).publishBlockStream(connection); // should only be called once
         verifyNoMoreInteractions(grpcServiceClient);
@@ -218,10 +221,8 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
     @Test
     void testConstructorWithInitialBlock() {
-        final ConfigProvider configProvider = createConfigProvider(createDefaultConfigProvider());
-
         // Create connection with initial block number
-        final BlockNodeConnection connectionWithInitialBlock = new BlockNodeConnection(
+        connection = new BlockNodeConnection(
                 configProvider,
                 nodeConfig,
                 connectionManager,
@@ -233,7 +234,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
                 clientFactory);
 
         // Verify the streamingBlockNumber was set
-        final AtomicLong streamingBlockNumber = streamingBlockNumber(connectionWithInitialBlock);
+        final AtomicLong streamingBlockNumber = streamingBlockNumber();
         assertThat(streamingBlockNumber).hasValue(100L);
     }
 
@@ -242,7 +243,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
      * Uses mocks to simulate a timeout without actually waiting, making the test fast.
      */
     @Test
-    void testCreateRequestPipeline_timeoutException() throws Exception {
+    void testInitialize_timeoutException() throws Exception {
         // Create a mock Future that will throw TimeoutException when get() is called
         @SuppressWarnings("unchecked")
         final Future<Object> mockFuture = mock(Future.class);
@@ -252,7 +253,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         doReturn(mockFuture).when(pipelineExecutor).submit(any(Runnable.class));
 
         // Attempt to create pipeline - should timeout and throw
-        final RuntimeException exception = catchRuntimeException(() -> connection.createRequestPipeline());
+        final RuntimeException exception = catchRuntimeException(() -> connection.initialize());
 
         assertThat(exception).isNotNull();
         assertThat(exception.getMessage()).contains("Pipeline creation timed out");
@@ -264,7 +265,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verify(metrics).recordPipelineOperationTimeout();
 
         // Connection should still be UNINITIALIZED since pipeline creation failed
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.UNINITIALIZED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.UNINITIALIZED);
     }
 
     /**
@@ -272,7 +273,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
      * Uses mocks to simulate an interruption without actually waiting, making the test fast.
      */
     @Test
-    void testCreateRequestPipeline_interruptedException() throws Exception {
+    void testInitialize_interruptedException() throws Exception {
         // Create a mock Future that will throw InterruptedException when get() is called
         @SuppressWarnings("unchecked")
         final Future<Object> mockFuture = mock(Future.class);
@@ -283,7 +284,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         doReturn(mockFuture).when(pipelineExecutor).submit(any(Runnable.class));
 
         // Attempt to create pipeline - should handle interruption and throw
-        final RuntimeException exception = catchRuntimeException(() -> connection.createRequestPipeline());
+        final RuntimeException exception = catchRuntimeException(() -> connection.initialize());
 
         assertThat(exception).isNotNull();
         assertThat(exception.getMessage()).contains("Interrupted while creating pipeline");
@@ -293,7 +294,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verify(mockFuture).get(anyLong(), any(TimeUnit.class));
 
         // Connection should still be UNINITIALIZED since pipeline creation failed
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.UNINITIALIZED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.UNINITIALIZED);
     }
 
     /**
@@ -301,7 +302,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
      * Uses mocks to simulate an execution error without actually waiting, making the test fast.
      */
     @Test
-    void testCreateRequestPipeline_executionException() throws Exception {
+    void testInitialize_executionException() throws Exception {
         // Create a mock Future that will throw ExecutionException when get() is called
         @SuppressWarnings("unchecked")
         final Future<Object> mockFuture = mock(Future.class);
@@ -313,7 +314,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         doReturn(mockFuture).when(pipelineExecutor).submit(any(Runnable.class));
 
         // Attempt to create pipeline - should handle execution exception and throw
-        final RuntimeException exception = catchRuntimeException(() -> connection.createRequestPipeline());
+        final RuntimeException exception = catchRuntimeException(() -> connection.initialize());
 
         assertThat(exception).isNotNull();
         assertThat(exception.getMessage()).contains("Error creating pipeline");
@@ -324,12 +325,12 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verify(mockFuture).get(anyLong(), any(TimeUnit.class));
 
         // Connection should still be UNINITIALIZED since pipeline creation failed
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.UNINITIALIZED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.UNINITIALIZED);
     }
 
     @Test
     void testUpdatingConnectionState() {
-        final ConnectionState preUpdateState = connection.getConnectionState();
+        final ConnectionState preUpdateState = connection.currentState();
         // this should be uninitialized because we haven't called connect yet
         assertThat(preUpdateState).isEqualTo(ConnectionState.UNINITIALIZED);
         connection.updateConnectionState(ConnectionState.ACTIVE);
@@ -342,8 +343,23 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
                         eq(ONCE_PER_DAY_MILLIS), // period
                         eq(TimeUnit.MILLISECONDS));
 
-        final ConnectionState postUpdateState = connection.getConnectionState();
+        final ConnectionState postUpdateState = connection.currentState();
         assertThat(postUpdateState).isEqualTo(ConnectionState.ACTIVE);
+    }
+
+    @Test
+    void testUpdatingConnectionState_downgrade() {
+        final ConnectionState preUpdateState = connection.currentState();
+        // this should be uninitialized because we haven't called connect yet
+        assertThat(preUpdateState).isEqualTo(ConnectionState.UNINITIALIZED);
+        connection.updateConnectionState(ConnectionState.ACTIVE);
+
+        // the connection is ACTIVE so try to "downgrade" the state back to READY... should fail
+        assertThatThrownBy(() -> connection.updateConnectionState(ConnectionState.READY))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessage("Attempted to downgrade state from ACTIVE to READY");
+
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.ACTIVE);
     }
 
     @Test
@@ -360,12 +376,12 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
                         eq(TimeUnit.MILLISECONDS));
 
         // do a quick sanity check on the state
-        final ConnectionState preState = connection.getConnectionState();
+        final ConnectionState preState = connection.currentState();
         assertThat(preState).isEqualTo(ConnectionState.ACTIVE);
 
         connection.handleStreamFailure();
 
-        final ConnectionState postState = connection.getConnectionState();
+        final ConnectionState postState = connection.currentState();
         assertThat(postState).isEqualTo(ConnectionState.CLOSED);
 
         verify(requestPipeline).onComplete();
@@ -378,7 +394,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         final AtomicLong streamingBlockNumber = streamingBlockNumber();
         streamingBlockNumber.set(-1); // pretend we are currently not streaming any blocks
         final PublishStreamResponse response = createBlockAckResponse(10L);
-        when(connectionManager.recordBlockAckAndCheckLatency(eq(connection.getNodeConfig()), eq(10L), any()))
+        when(connectionManager.recordBlockAckAndCheckLatency(eq(connection.configuration()), eq(10L), any()))
                 .thenReturn(latencyResult);
         when(latencyResult.shouldSwitch()).thenReturn(false);
 
@@ -388,9 +404,11 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         assertThat(streamingBlockNumber).hasValue(11); // moved to acked block + 1
 
         verify(connectionManager)
-                .recordBlockAckAndCheckLatency(eq(connection.getNodeConfig()), eq(10L), any(Instant.class));
-        verify(bufferService).getLastBlockNumberProduced();
+                .recordBlockAckAndCheckLatency(eq(connection.configuration()), eq(10L), any(Instant.class));
+        verify(bufferService, atLeastOnce()).getLastBlockNumberProduced();
         verify(bufferService).setLatestAcknowledgedBlock(10);
+        verify(bufferService).getHighestAckedBlockNumber();
+        verify(bufferService).getEarliestAvailableBlockNumber();
         verify(metrics).recordResponseReceived(ResponseOneOfType.ACKNOWLEDGEMENT);
         verifyNoMoreInteractions(metrics);
         verifyNoMoreInteractions(bufferService);
@@ -403,7 +421,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         streamingBlockNumber.set(10); // pretend we are streaming block 10
         final PublishStreamResponse response = createBlockAckResponse(8L);
         when(bufferService.getLastBlockNumberProduced()).thenReturn(10L);
-        when(connectionManager.recordBlockAckAndCheckLatency(eq(connection.getNodeConfig()), eq(8L), any()))
+        when(connectionManager.recordBlockAckAndCheckLatency(eq(connection.configuration()), eq(8L), any()))
                 .thenReturn(latencyResult);
         when(latencyResult.shouldSwitch()).thenReturn(false);
 
@@ -412,9 +430,12 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
         assertThat(streamingBlockNumber).hasValue(10L); // should not change
 
-        verify(bufferService).getLastBlockNumberProduced();
+        verify(bufferService, atLeastOnce()).getLastBlockNumberProduced();
         verify(bufferService).setLatestAcknowledgedBlock(8);
+        verify(bufferService).getHighestAckedBlockNumber();
+        verify(bufferService).getEarliestAvailableBlockNumber();
         verify(metrics).recordResponseReceived(ResponseOneOfType.ACKNOWLEDGEMENT);
+        verify(bufferService, times(8)).getBlockState(anyLong());
         verifyNoMoreInteractions(connectionManager);
         verifyNoMoreInteractions(bufferService);
         verifyNoMoreInteractions(metrics);
@@ -427,7 +448,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         final PublishStreamResponse response = createBlockAckResponse(11L);
 
         when(bufferService.getLastBlockNumberProduced()).thenReturn(10L);
-        when(connectionManager.recordBlockAckAndCheckLatency(eq(connection.getNodeConfig()), eq(11L), any()))
+        when(connectionManager.recordBlockAckAndCheckLatency(eq(connection.configuration()), eq(11L), any()))
                 .thenReturn(latencyResult);
         when(latencyResult.shouldSwitch()).thenReturn(false);
 
@@ -436,9 +457,12 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
         assertThat(streamingBlockNumber).hasValue(12); // should be 1 + acked block number
 
-        verify(bufferService).getLastBlockNumberProduced();
+        verify(bufferService, atLeastOnce()).getLastBlockNumberProduced();
         verify(bufferService).setLatestAcknowledgedBlock(11L);
+        verify(bufferService, atLeastOnce()).getHighestAckedBlockNumber();
+        verify(bufferService, atLeastOnce()).getEarliestAvailableBlockNumber();
         verify(metrics).recordResponseReceived(ResponseOneOfType.ACKNOWLEDGEMENT);
+        verify(bufferService, times(10)).getBlockState(anyLong());
         verifyNoMoreInteractions(connectionManager);
         verifyNoMoreInteractions(metrics);
         verifyNoMoreInteractions(bufferService);
@@ -451,7 +475,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         final PublishStreamResponse response = createBlockAckResponse(11L);
 
         when(bufferService.getLastBlockNumberProduced()).thenReturn(12L);
-        when(connectionManager.recordBlockAckAndCheckLatency(eq(connection.getNodeConfig()), eq(11L), any()))
+        when(connectionManager.recordBlockAckAndCheckLatency(eq(connection.configuration()), eq(11L), any()))
                 .thenReturn(latencyResult);
         when(latencyResult.shouldSwitch()).thenReturn(false);
 
@@ -460,9 +484,12 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
         assertThat(streamingBlockNumber).hasValue(12); // should be 1 + acked block number
 
-        verify(bufferService).getLastBlockNumberProduced();
+        verify(bufferService, atLeastOnce()).getLastBlockNumberProduced();
         verify(bufferService).setLatestAcknowledgedBlock(11L);
+        verify(bufferService).getHighestAckedBlockNumber();
+        verify(bufferService).getEarliestAvailableBlockNumber();
         verify(metrics).recordResponseReceived(ResponseOneOfType.ACKNOWLEDGEMENT);
+        verify(bufferService, times(11)).getBlockState(anyLong());
         verifyNoMoreInteractions(connectionManager);
         verifyNoMoreInteractions(metrics);
         verifyNoMoreInteractions(bufferService);
@@ -476,7 +503,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         final PublishStreamResponse response = createBlockAckResponse(10L);
 
         when(bufferService.getLastBlockNumberProduced()).thenReturn(10L);
-        when(connectionManager.recordBlockAckAndCheckLatency(eq(connection.getNodeConfig()), eq(10L), any()))
+        when(connectionManager.recordBlockAckAndCheckLatency(eq(connection.configuration()), eq(10L), any()))
                 .thenReturn(latencyResult);
         when(latencyResult.shouldSwitch()).thenReturn(false);
 
@@ -486,9 +513,12 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         // Should not jump to block since acknowledgement is not newer
         assertThat(streamingBlockNumber).hasValue(10L);
 
-        verify(bufferService).getLastBlockNumberProduced();
+        verify(bufferService, atLeastOnce()).getLastBlockNumberProduced();
         verify(bufferService).setLatestAcknowledgedBlock(10L);
+        verify(bufferService, atLeastOnce()).getHighestAckedBlockNumber();
+        verify(bufferService, atLeastOnce()).getEarliestAvailableBlockNumber();
         verify(metrics).recordResponseReceived(ResponseOneOfType.ACKNOWLEDGEMENT);
+        verify(bufferService, times(10)).getBlockState(anyLong());
         verifyNoMoreInteractions(connectionManager);
         verifyNoMoreInteractions(metrics);
         verifyNoMoreInteractions(bufferService);
@@ -501,7 +531,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         final PublishStreamResponse response = createBlockAckResponse(10L);
 
         when(bufferService.getLastBlockNumberProduced()).thenReturn(10L);
-        when(connectionManager.recordBlockAckAndCheckLatency(eq(connection.getNodeConfig()), eq(10L), any()))
+        when(connectionManager.recordBlockAckAndCheckLatency(eq(connection.configuration()), eq(10L), any()))
                 .thenReturn(latencyResult);
         when(latencyResult.shouldSwitch()).thenReturn(true);
         when(latencyResult.consecutiveHighLatencyEvents()).thenReturn(5);
@@ -513,7 +543,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         // Should not jump to block since acknowledgement is not newer
         assertThat(streamingBlockNumber).hasValue(10L);
 
-        verify(bufferService).getLastBlockNumberProduced();
+        verify(bufferService, atLeastOnce()).getLastBlockNumberProduced();
         verify(bufferService).setLatestAcknowledgedBlock(10L);
         verify(metrics).recordResponseReceived(ResponseOneOfType.ACKNOWLEDGEMENT);
         verify(connectionManager).isOnlyOneBlockNodeConfigured();
@@ -599,44 +629,79 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
     }
 
     @Test
-    void testOnNext_endOfStream_blockNodeBehind_blockExists() {
+    void testOnNext_blockNodeBehind_blockExists() {
         openConnectionAndResetMocks();
-        final PublishStreamResponse response = createEndOfStreamResponse(Code.BEHIND, 10L);
+        final PublishStreamResponse response = createBlockNodeBehindResponse(10L);
         when(bufferService.getBlockState(11L)).thenReturn(new BlockState(11L));
         connection.updateConnectionState(ConnectionState.ACTIVE);
 
         connection.onNext(response);
 
-        verify(metrics).recordLatestBlockEndOfStream(10L);
-        verify(metrics).recordResponseEndOfStreamReceived(Code.BEHIND);
-        verify(metrics).recordConnectionClosed();
-        verify(metrics).recordActiveConnectionIp(-1L);
-        verify(requestPipeline).onComplete();
-        verify(connectionManager).rescheduleConnection(connection, null, 11L, false);
+        verify(metrics).recordLatestBlockBehindPublisher(10L);
+        verify(metrics).recordResponseReceived(ResponseOneOfType.NODE_BEHIND_PUBLISHER);
         verify(bufferService).getBlockState(11L);
         verifyNoMoreInteractions(metrics);
         verifyNoMoreInteractions(requestPipeline);
     }
 
     @Test
-    void testOnNext_endOfStream_blockNodeBehind_blockDoesNotExist() {
+    void testOnNext_blockNodeBehind_blockDoesNotExist_TooFarBehind() {
         openConnectionAndResetMocks();
-        final PublishStreamResponse response = createEndOfStreamResponse(Code.BEHIND, 10L);
+        final PublishStreamResponse response = createBlockNodeBehindResponse(10L);
+        when(bufferService.getBlockState(11L)).thenReturn(null);
+        when(bufferService.getEarliestAvailableBlockNumber()).thenReturn(12L);
+
+        connection.updateConnectionState(ConnectionState.ACTIVE);
+        connection.onNext(response);
+
+        verify(metrics).recordLatestBlockBehindPublisher(10L);
+        verify(metrics).recordResponseReceived(ResponseOneOfType.NODE_BEHIND_PUBLISHER);
+        verify(metrics).recordConnectionClosed();
+        verify(metrics).recordActiveConnectionIp(-1L);
+        verify(metrics).recordRequestEndStreamSent(EndStream.Code.TOO_FAR_BEHIND);
+        verify(metrics).recordRequestLatency(anyLong());
+        verify(bufferService, atLeastOnce()).getEarliestAvailableBlockNumber();
+        verify(bufferService, atLeastOnce()).getHighestAckedBlockNumber();
+        verify(bufferService).getBlockState(11L);
+        verify(requestPipeline)
+                .onNext(PublishStreamRequest.newBuilder()
+                        .endStream(EndStream.newBuilder()
+                                .endCode(EndStream.Code.TOO_FAR_BEHIND)
+                                .earliestBlockNumber(12L)
+                                .build())
+                        .build());
+        verify(requestPipeline).onComplete();
+        verify(connectionManager).rescheduleConnection(connection, Duration.ofSeconds(30), null, true);
+        verifyNoMoreInteractions(metrics);
+        verifyNoMoreInteractions(requestPipeline);
+    }
+
+    @Test
+    void testOnNext_endOfStream_blockNodeBehind_blockDoesNotExist_Error() {
+        openConnectionAndResetMocks();
+        final PublishStreamResponse response = createBlockNodeBehindResponse(10L);
+        when(bufferService.getHighestAckedBlockNumber()).thenReturn(10L);
         when(bufferService.getBlockState(11L)).thenReturn(null);
 
         connection.updateConnectionState(ConnectionState.ACTIVE);
         connection.onNext(response);
 
-        verify(metrics).recordLatestBlockEndOfStream(10L);
-        verify(metrics).recordResponseEndOfStreamReceived(Code.BEHIND);
+        verify(metrics).recordLatestBlockBehindPublisher(10L);
+        verify(metrics).recordResponseReceived(ResponseOneOfType.NODE_BEHIND_PUBLISHER);
         verify(metrics).recordConnectionClosed();
         verify(metrics).recordActiveConnectionIp(-1L);
-        verify(metrics).recordRequestEndStreamSent(EndStream.Code.TOO_FAR_BEHIND);
+        verify(metrics).recordRequestEndStreamSent(EndStream.Code.ERROR);
         verify(metrics).recordRequestLatency(anyLong());
-        verify(bufferService, times(1)).getEarliestAvailableBlockNumber();
-        verify(bufferService, times(1)).getHighestAckedBlockNumber();
+        verify(bufferService, atLeastOnce()).getEarliestAvailableBlockNumber();
+        verify(bufferService, atLeastOnce()).getHighestAckedBlockNumber();
         verify(bufferService).getBlockState(11L);
-        verify(requestPipeline).onNext(createRequest(EndStream.Code.TOO_FAR_BEHIND));
+        verify(requestPipeline)
+                .onNext(PublishStreamRequest.newBuilder()
+                        .endStream(EndStream.newBuilder()
+                                .endCode(EndStream.Code.ERROR)
+                                .latestBlockNumber(10L)
+                                .build())
+                        .build());
         verify(requestPipeline).onComplete();
         verify(connectionManager).rescheduleConnection(connection, Duration.ofSeconds(30), null, true);
         verifyNoMoreInteractions(metrics);
@@ -800,12 +865,14 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         final PublishStreamRequest request = createRequest(newBlockHeaderItem());
 
         connection.updateConnectionState(ConnectionState.ACTIVE);
-        connection.sendRequest(request);
+        sendRequest(new BlockItemsStreamRequest(request, 1L, 1, 1, false, false));
 
         verify(requestPipeline).onNext(request);
         verify(metrics).recordRequestSent(RequestOneOfType.BLOCK_ITEMS);
         verify(metrics).recordBlockItemsSent(1);
         verify(metrics).recordRequestLatency(anyLong());
+        verify(metrics).recordRequestBlockItemCount(1);
+        verify(metrics).recordRequestBytes(anyLong());
         verifyNoMoreInteractions(metrics);
         verifyNoMoreInteractions(requestPipeline);
         verifyNoMoreInteractions(connectionManager);
@@ -816,9 +883,9 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
     void testSendRequest_notActive() {
         final PublishStreamRequest request = createRequest(newBlockHeaderItem());
 
-        connection.createRequestPipeline();
-        connection.updateConnectionState(ConnectionState.PENDING);
-        connection.sendRequest(request);
+        connection.initialize();
+        connection.updateConnectionState(ConnectionState.READY);
+        sendRequest(new BlockItemsStreamRequest(request, 1L, 1, 1, false, false));
 
         verify(metrics).recordConnectionOpened();
         verifyNoMoreInteractions(metrics);
@@ -832,8 +899,8 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         final PublishStreamRequest request = createRequest(newBlockHeaderItem());
 
         // don't create the observer
-        connection.updateConnectionState(ConnectionState.PENDING);
-        connection.sendRequest(request);
+        connection.updateConnectionState(ConnectionState.READY);
+        sendRequest(new BlockItemsStreamRequest(request, 1L, 1, 1, false, false));
 
         verifyNoInteractions(metrics);
         verifyNoMoreInteractions(requestPipeline);
@@ -848,7 +915,8 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         doThrow(new RuntimeException("kaboom!")).when(requestPipeline).onNext(any());
         final PublishStreamRequest request = createRequest(newBlockHeaderItem());
 
-        final RuntimeException e = catchRuntimeException(() -> connection.sendRequest(request));
+        final RuntimeException e =
+                catchRuntimeException(() -> sendRequest(new BlockItemsStreamRequest(request, 1L, 1, 1, false, false)));
         assertThat(e).isInstanceOf(RuntimeException.class);
         // Exception gets wrapped when executed in virtual thread executor
         assertThat(e.getMessage()).contains("Error executing pipeline.onNext()");
@@ -867,13 +935,13 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         final BlockNodeConnection spiedConnection = spy(connection);
         doReturn(ConnectionState.ACTIVE, ConnectionState.CLOSING)
                 .when(spiedConnection)
-                .getConnectionState();
+                .currentState();
         final PublishStreamRequest request = createRequest(newBlockHeaderItem());
 
-        spiedConnection.sendRequest(request);
+        sendRequest(spiedConnection, new BlockItemsStreamRequest(request, 1L, 1, 1, false, false));
 
         verify(requestPipeline).onNext(any());
-        verify(spiedConnection, atLeast(2)).getConnectionState();
+        verify(spiedConnection, atLeast(2)).currentState();
 
         verifyNoInteractions(metrics);
     }
@@ -885,9 +953,9 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
         // Set to ACTIVE state but don't create the pipeline
         connection.updateConnectionState(ConnectionState.ACTIVE);
-        // requestPipeline remains null since we didn't call createRequestPipeline()
+        // requestPipeline remains null since we didn't call initialize()
 
-        connection.sendRequest(request);
+        sendRequest(new BlockItemsStreamRequest(request, 1L, 1, 1, false, false));
 
         // Should not interact with anything since pipeline is null
         verifyNoInteractions(metrics);
@@ -911,7 +979,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
         connection.close(true);
 
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
 
         verify(metrics).recordConnectionClosed();
         verify(metrics).recordActiveConnectionIp(-1L);
@@ -936,7 +1004,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
         connection.close(true);
 
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
 
         verify(requestPipeline).onComplete();
         verify(metrics).recordConnectionClosed();
@@ -954,7 +1022,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
         connection.close(false);
 
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
 
         // Should not call onComplete when callOnComplete is false
         verify(metrics).recordConnectionClosed();
@@ -968,11 +1036,11 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
     @Test
     void testClose_notActiveState() {
         openConnectionAndResetMocks();
-        connection.updateConnectionState(ConnectionState.PENDING);
+        connection.updateConnectionState(ConnectionState.READY);
 
         connection.close(true);
 
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
 
         // Should call onComplete when callOnComplete=true and state transitions to CLOSING
         verify(requestPipeline).onComplete();
@@ -1001,7 +1069,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verify(requestPipeline).onComplete(); // closePipeline should still be called before the exception
 
         // Connection state should still be CLOSED even after the exception
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
     }
 
     // Tests exception handling during pipeline completion (should catch and log Exception)
@@ -1022,7 +1090,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verify(requestPipeline).onComplete(); // Should be called and throw exception
 
         // Connection state should still be CLOSED even after the pipeline exception
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
     }
 
     // Tests close operation when requestPipeline is null (should skip pipeline closure)
@@ -1030,12 +1098,12 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
     void testClose_pipelineNull() {
         // Don't call openConnectionAndResetMocks() to avoid creating a pipeline
         connection.updateConnectionState(ConnectionState.ACTIVE);
-        // requestPipeline remains null since we didn't call createRequestPipeline()
+        // requestPipeline remains null since we didn't call initialize()
 
         connection.close(true);
 
         // Should complete successfully without interacting with pipeline
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
 
         // Should not interact with pipeline since it's null
         verifyNoInteractions(requestPipeline);
@@ -1080,27 +1148,27 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         final BlockNodeConnection spyConnection = spy(connection);
         final AtomicBoolean stateChanged = new AtomicBoolean(false);
 
-        // Override getConnectionState to trigger state change on first call
+        // Override status to trigger state change on first call
         doAnswer(invocation -> {
-                    ConnectionState result = (ConnectionState) invocation.callRealMethod();
+                    final ConnectionState result = (ConnectionState) invocation.callRealMethod();
                     if (!stateChanged.get()) {
                         stateChanged.set(true);
                         // Change the actual internal state to cause fail
                         final AtomicReference<ConnectionState> state = connectionState();
-                        state.set(ConnectionState.PENDING);
+                        state.set(ConnectionState.READY);
                     }
                     return result;
                 })
                 .when(spyConnection)
-                .getConnectionState();
+                .currentState();
 
-        // Now call close - it will get ACTIVE from getConnectionState,
-        // but then the state will be PENDING when it tries to CAS
+        // Now call close - it will get ACTIVE from state,
+        // but then the state will be READY when it tries to CAS
         spyConnection.close(true);
 
         // The close should have aborted due to state mismatch
-        // State should still be PENDING (not changed to CLOSING or CLOSED)
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.PENDING);
+        // State should still be READY (not changed to CLOSING or CLOSED)
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.READY);
 
         // No interactions should have occurred since close aborted early
         verifyNoInteractions(requestPipeline);
@@ -1113,7 +1181,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
         connection.onError(new RuntimeException("oh bother"));
 
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
 
         verify(metrics).recordConnectionOnError();
         verify(metrics).recordConnectionClosed();
@@ -1136,7 +1204,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
         connection.onError(grpcException);
 
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
 
         verify(metrics).recordConnectionOnError();
         verify(metrics).recordConnectionClosed();
@@ -1220,233 +1288,71 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
     }
 
     @Test
-    void testConnectionWorkerLifecycle() throws Exception {
-        final AtomicReference<Thread> workerThreadRef = workerThreadRef();
-        workerThreadRef.set(null); // clear out the fake worker thread so a real one can be initialized
-
+    void testConnectionWorker_switchBlock_initialValue() throws Exception {
         openConnectionAndResetMocks();
+        connection.initialize();
         connection.updateConnectionState(ConnectionState.ACTIVE);
-
-        // the act of having the connection go active will start the worker thread
-        final Thread workerThread = workerThreadRef.get();
-        assertThat(workerThread).isNotNull();
-        assertThat(workerThread.isAlive()).isTrue();
-
-        // set the connection state to closing. this will terminate the worker thread
-        connection.updateConnectionState(ConnectionState.CLOSING);
-
-        // sleep for a little bit to give the worker a chance to detect the connection state change
-        sleep(100);
-
-        assertThat(workerThreadRef).hasNullValue();
-        assertThat(workerThread.isAlive()).isFalse();
-    }
-
-    @Test
-    void testConnectionWorker_switchBlock_initializeToHighestAckedBlock() throws Exception {
-        openConnectionAndResetMocks();
-        final AtomicReference<Thread> workerThreadRef = workerThreadRef();
-        workerThreadRef.set(null); // clear out the fake worker thread so a real one can be initialized
         final AtomicLong streamingBlockNumber = streamingBlockNumber();
 
-        doReturn(100L).when(bufferService).getHighestAckedBlockNumber();
+        doReturn(101L).when(bufferService).getLastBlockNumberProduced();
         doReturn(new BlockState(101)).when(bufferService).getBlockState(101);
 
         assertThat(streamingBlockNumber).hasValue(-1);
 
-        connection.updateConnectionState(ConnectionState.ACTIVE);
-        sleep(50); // give some time for the worker loop to detect the changes
+        // Call doWork directly instead of starting the worker thread
+        final Object worker = createWorker();
+        invokeDoWork(worker);
 
-        assertThat(workerThreadRef).doesNotHaveNullValue();
         assertThat(streamingBlockNumber).hasValue(101);
 
-        verify(bufferService).getHighestAckedBlockNumber();
+        verify(bufferService).getLastBlockNumberProduced();
         verify(bufferService).getBlockState(101);
         verifyNoMoreInteractions(bufferService);
         verifyNoInteractions(connectionManager);
-        verifyNoInteractions(metrics);
-        verifyNoInteractions(requestPipeline);
-    }
-
-    @Test
-    void testConnectionWorker_switchBlock_initializeToEarliestBlock() throws Exception {
-        openConnectionAndResetMocks();
-        final AtomicReference<Thread> workerThreadRef = workerThreadRef();
-        workerThreadRef.set(null); // clear out the fake worker thread so a real one can be initialized
-        final AtomicLong streamingBlockNumber = streamingBlockNumber();
-
-        doReturn(-1L).when(bufferService).getHighestAckedBlockNumber();
-        doReturn(12L).when(bufferService).getEarliestAvailableBlockNumber();
-        doReturn(new BlockState(12)).when(bufferService).getBlockState(12);
-
-        assertThat(streamingBlockNumber).hasValue(-1);
-
-        connection.updateConnectionState(ConnectionState.ACTIVE);
-        sleep(50); // give some time for the worker loop to detect the changes
-
-        assertThat(workerThreadRef).doesNotHaveNullValue();
-        assertThat(streamingBlockNumber).hasValue(12);
-
-        verify(bufferService).getHighestAckedBlockNumber();
-        verify(bufferService).getEarliestAvailableBlockNumber();
-        verify(bufferService).getBlockState(12);
-        verifyNoMoreInteractions(bufferService);
-        verifyNoInteractions(connectionManager);
-        verifyNoInteractions(metrics);
+        verifyNoMoreInteractions(metrics);
         verifyNoInteractions(requestPipeline);
     }
 
     @Test
     void testConnectionWorker_switchBlock_noBlockAvailable() throws Exception {
         openConnectionAndResetMocks();
-        final AtomicReference<Thread> workerThreadRef = workerThreadRef();
-        workerThreadRef.set(null); // clear out the fake worker thread so a real one can be initialized
+        connection.initialize();
+        connection.updateConnectionState(ConnectionState.ACTIVE);
         final AtomicLong streamingBlockNumber = streamingBlockNumber();
 
-        doReturn(-1L).when(bufferService).getHighestAckedBlockNumber();
-        doReturn(-1L).when(bufferService).getEarliestAvailableBlockNumber();
+        doReturn(-1L).when(bufferService).getLastBlockNumberProduced();
 
         assertThat(streamingBlockNumber).hasValue(-1);
 
-        connection.updateConnectionState(ConnectionState.ACTIVE);
-        sleep(50); // give some time for the worker loop to detect the changes
+        final Object worker = createWorker();
+        invokeDoWork(worker);
 
-        assertThat(workerThreadRef).doesNotHaveNullValue();
         assertThat(streamingBlockNumber).hasValue(-1);
 
-        verify(bufferService, atLeastOnce()).getHighestAckedBlockNumber();
-        verify(bufferService, atLeastOnce()).getEarliestAvailableBlockNumber();
+        verify(bufferService).getLastBlockNumberProduced();
         verifyNoMoreInteractions(bufferService);
-        verifyNoInteractions(connectionManager);
-        verifyNoInteractions(metrics);
-        verifyNoInteractions(requestPipeline);
-    }
-
-    @Test
-    void testConnectionWorker_sendRequests() throws Exception {
-        openConnectionAndResetMocks();
-        final AtomicReference<Thread> workerThreadRef = workerThreadRef();
-        workerThreadRef.set(null); // clear the fake worker thread
-        final AtomicLong streamingBlockNumber = streamingBlockNumber();
-
-        streamingBlockNumber.set(10);
-
-        final BlockState block = new BlockState(10);
-
-        doReturn(block).when(bufferService).getBlockState(10);
-
-        final ArgumentCaptor<PublishStreamRequest> requestCaptor = ArgumentCaptor.forClass(PublishStreamRequest.class);
-
-        connection.updateConnectionState(ConnectionState.ACTIVE);
-        // sleep to let the worker detect the state change and start doing work
-        sleep(100);
-
-        // add the header to the block, then wait for the max request delay... a request with the header should be sent
-        final BlockItem item1 = newBlockHeaderItem();
-        block.addItem(item1);
-
-        sleep(400);
-        verify(requestPipeline, atLeastOnce()).onNext(requestCaptor.capture());
-        final List<PublishStreamRequest> requests1 = requestCaptor.getAllValues();
-        reset(requestPipeline);
-
-        assertThat(requests1).hasSize(1);
-        assertRequestContainsItems(requests1.getFirst(), item1);
-
-        // add multiple small items to the block and wait for them to be sent in one batch
-        final BlockItem item2 = newBlockTxItem(15);
-        final BlockItem item3 = newBlockTxItem(20);
-        final BlockItem item4 = newBlockTxItem(50);
-        block.addItem(item2);
-        block.addItem(item3);
-        block.addItem(item4);
-
-        sleep(400);
-
-        verify(requestPipeline, atLeastOnce()).onNext(requestCaptor.capture());
-        final List<PublishStreamRequest> requests2 = requestCaptor.getAllValues();
-        reset(requestPipeline);
-        requests2.removeAll(requests1);
-        assertRequestContainsItems(requests2, item2, item3, item4);
-
-        // add a large item and a smaller item
-        final BlockItem item5 = newBlockTxItem(2_097_000);
-        final BlockItem item6 = newBlockTxItem(1_000_250);
-        block.addItem(item5);
-        block.addItem(item6);
-
-        sleep(500);
-
-        verify(requestPipeline, times(2)).onNext(requestCaptor.capture());
-        final List<PublishStreamRequest> requests3 = requestCaptor.getAllValues();
-        reset(requestPipeline);
-        requests3.removeAll(requests1);
-        requests3.removeAll(requests2);
-        // there should be two requests since the items together exceed the max per request
-        assertThat(requests3).hasSize(2);
-        assertRequestContainsItems(requests3, item5, item6);
-
-        // now add some more items and the block proof, then close the block
-        // after these requests are sent, we should see the worker loop move to the next block
-        final BlockItem item7 = newBlockTxItem(100);
-        final BlockItem item8 = newBlockTxItem(250);
-        final BlockItem item9 = newPreProofBlockStateChangesItem();
-        final BlockItem item10 = newBlockProofItem(10, 1_420_910);
-        block.addItem(item7);
-        block.addItem(item8);
-        block.addItem(item9);
-        block.addItem(item10);
-        block.closeBlock();
-
-        sleep(500);
-
-        verify(requestPipeline, atLeastOnce()).onNext(requestCaptor.capture());
-        final List<PublishStreamRequest> requests4 = requestCaptor.getAllValues();
-        final int totalRequestsSent = requests4.size();
-        final int endOfBlockRequest = 1;
-
-        reset(requestPipeline);
-        requests4.removeAll(requests1);
-        requests4.removeAll(requests2);
-        requests4.removeAll(requests3);
-        assertRequestContainsItems(requests4, item7, item8, item9, item10);
-        assertThat(requests4.getLast()).isEqualTo(createRequest(10));
-
-        assertThat(streamingBlockNumber).hasValue(11);
-
-        verify(metrics, times(endOfBlockRequest)).recordRequestSent(RequestOneOfType.END_OF_BLOCK);
-        verify(metrics, times(totalRequestsSent - endOfBlockRequest)).recordRequestSent(RequestOneOfType.BLOCK_ITEMS);
-        verify(metrics, times(totalRequestsSent - endOfBlockRequest)).recordBlockItemsSent(anyInt());
-        verify(metrics, times(totalRequestsSent)).recordRequestLatency(anyLong());
-        verify(connectionManager).recordBlockProofSent(eq(connection.getNodeConfig()), eq(10L), any(Instant.class));
-        verify(bufferService, atLeastOnce()).getBlockState(10);
-        verify(bufferService, atLeastOnce()).getBlockState(11);
-        verify(bufferService, atLeastOnce()).getEarliestAvailableBlockNumber();
         verifyNoMoreInteractions(metrics);
-        verifyNoMoreInteractions(bufferService);
-        verifyNoMoreInteractions(connectionManager);
-        verifyNoMoreInteractions(requestPipeline);
+        verifyNoInteractions(connectionManager);
+        verifyNoInteractions(requestPipeline);
     }
 
     @Test
     void testConnectionWorker_noItemsAvailable() throws Exception {
         openConnectionAndResetMocks();
-        final AtomicReference<Thread> workerThreadRef = workerThreadRef();
-        workerThreadRef.set(null); // clear the fake worker thread
+        connection.initialize();
+        connection.updateConnectionState(ConnectionState.ACTIVE);
         final AtomicLong streamingBlockNumber = streamingBlockNumber();
 
         streamingBlockNumber.set(10);
-
         doReturn(new BlockState(10)).when(bufferService).getBlockState(10);
 
-        connection.updateConnectionState(ConnectionState.ACTIVE);
-        // sleep to let the worker detect the state change and start doing work
-        sleep(150);
+        // Call doWork directly - with no items in the block, nothing should be sent
+        final Object worker = createWorker();
+        invokeDoWork(worker);
 
-        assertThat(workerThreadRef).doesNotHaveNullValue();
         assertThat(streamingBlockNumber).hasValue(10);
 
-        verify(bufferService, atLeastOnce()).getBlockState(10);
+        verify(bufferService).getBlockState(10);
         verifyNoMoreInteractions(bufferService);
         verifyNoInteractions(connectionManager);
         verifyNoInteractions(metrics);
@@ -1456,19 +1362,19 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
     @Test
     void testConnectionWorker_blockNodeTooFarBehind() throws Exception {
         openConnectionAndResetMocks();
-        final AtomicReference<Thread> workerThreadRef = workerThreadRef();
-        workerThreadRef.set(null); // clear the fake worker thread
+        connection.initialize();
+        connection.updateConnectionState(ConnectionState.ACTIVE);
         final AtomicLong streamingBlockNumber = streamingBlockNumber();
 
         streamingBlockNumber.set(10);
         when(bufferService.getEarliestAvailableBlockNumber()).thenReturn(15L);
         when(bufferService.getBlockState(anyLong())).thenReturn(null);
+        when(bufferService.getHighestAckedBlockNumber()).thenReturn(-1L);
 
-        connection.updateConnectionState(ConnectionState.ACTIVE);
-        // sleep to let the worker detect the state change and start doing work
-        sleep(150);
+        // block 10 is too far behind, should send TOO_FAR_BEHIND
+        final Object worker = createWorker();
+        invokeDoWork(worker);
 
-        assertThat(workerThreadRef).hasNullValue();
         assertThat(streamingBlockNumber).hasValue(10);
 
         verify(metrics).recordRequestLatency(anyLong());
@@ -1492,8 +1398,8 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
     @Test
     void testConnectionWorker_blockJump() throws Exception {
         openConnectionAndResetMocks();
-        final AtomicReference<Thread> workerThreadRef = workerThreadRef();
-        workerThreadRef.set(null); // clear the fake worker thread
+        connection.initialize();
+        connection.updateConnectionState(ConnectionState.ACTIVE);
         final AtomicLong streamingBlockNumber = streamingBlockNumber();
 
         streamingBlockNumber.set(10);
@@ -1501,37 +1407,55 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         final BlockState block10 = new BlockState(10);
         final BlockItem block10Header = newBlockHeaderItem(10);
         block10.addItem(block10Header);
+
         final BlockState block11 = new BlockState(11);
         final BlockItem block11Header = newBlockHeaderItem(11);
         block11.addItem(block11Header);
+
         doReturn(block10).when(bufferService).getBlockState(10);
         doReturn(block11).when(bufferService).getBlockState(11);
+        lenient().doReturn(null).when(bufferService).getBlockState(12L); // May check for block 12 after advancing
 
-        connection.updateConnectionState(ConnectionState.ACTIVE);
-        // sleep to let the worker detect the state change and start doing work
-        sleep(150);
+        final ArgumentCaptor<PublishStreamRequest> requestCaptor = ArgumentCaptor.forClass(PublishStreamRequest.class);
+        final Object worker = createWorker();
 
-        // create a skip response to force the connection to jump to block 11
+        // Call doWork - accumulates block 10 header (doesn't send yet)
+        invokeDoWork(worker);
+
+        // Verify nothing sent yet
+        verify(requestPipeline, times(0)).onNext(any());
+
+        // Now simulate a skip block response - forces jump to block 11
         final PublishStreamResponse skipResponse = createSkipBlock(10L);
         connection.onNext(skipResponse);
 
-        sleep(600); // give the worker thread some time to detect the change
+        // Call doWork again - should now process block 11 header
+        block11.closeBlock(); // Close block 11 to force sending
+        invokeDoWork(worker);
 
-        assertThat(streamingBlockNumber).hasValue(11);
+        // After sending block 11 completely, it will advance to block 12
+        assertThat(streamingBlockNumber).hasValue(12);
 
-        final ArgumentCaptor<PublishStreamRequest> requestCaptor = ArgumentCaptor.forClass(PublishStreamRequest.class);
-        verify(requestPipeline, times(2)).onNext(requestCaptor.capture());
+        verify(requestPipeline, atLeastOnce()).onNext(requestCaptor.capture());
+        List<PublishStreamRequest> allRequests = requestCaptor.getAllValues();
+        // Should have sent block 11 header and EndOfBlock
+        assertRequestContainsItems(allRequests.getFirst(), block11Header);
 
-        assertThat(requestCaptor.getAllValues()).hasSize(2);
-        assertRequestContainsItems(requestCaptor.getAllValues(), block10Header, block11Header);
-
-        verify(metrics, times(2)).recordRequestSent(RequestOneOfType.BLOCK_ITEMS);
-        verify(metrics, times(2)).recordBlockItemsSent(1);
-        verify(metrics, times(2)).recordRequestLatency(anyLong());
+        verify(metrics, atLeast(1)).recordRequestSent(RequestOneOfType.BLOCK_ITEMS);
+        verify(metrics, times(1)).recordRequestSent(RequestOneOfType.END_OF_BLOCK);
+        verify(metrics, atLeast(1)).recordBlockItemsSent(1);
+        verify(metrics, atLeast(2)).recordRequestLatency(anyLong());
         verify(metrics).recordLatestBlockSkipBlock(10);
         verify(metrics).recordResponseReceived(ResponseOneOfType.SKIP_BLOCK);
         verify(bufferService, atLeastOnce()).getBlockState(10);
         verify(bufferService, atLeastOnce()).getBlockState(11);
+        verify(bufferService, atLeastOnce()).getBlockState(12);
+        verify(bufferService, atLeastOnce()).getEarliestAvailableBlockNumber();
+        verify(metrics, times(1)).recordRequestBlockItemCount(1);
+        verify(metrics, times(1)).recordRequestBytes(anyLong());
+        verify(metrics, atLeastOnce()).recordStreamingBlockNumber(anyLong());
+        verify(metrics, atLeastOnce()).recordLatestBlockEndOfBlockSent(anyLong());
+        verify(metrics, atLeastOnce()).recordHeaderSentToBlockEndSentLatency(anyLong());
 
         verifyNoMoreInteractions(bufferService);
         verifyNoMoreInteractions(connectionManager);
@@ -1540,106 +1464,116 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
     }
 
     @Test
-    void testConnectionWorker_hugeItem() throws Exception {
+    void testConnectionWorker_hugeItems() throws Exception {
         openConnectionAndResetMocks();
-        final AtomicReference<Thread> workerThreadRef = workerThreadRef();
-        workerThreadRef.set(null); // clear the fake worker thread
+        connection.initialize();
+        connection.updateConnectionState(ConnectionState.ACTIVE);
         final AtomicLong streamingBlockNumber = streamingBlockNumber();
 
         streamingBlockNumber.set(10);
 
-        final BlockState block = new BlockState(10);
-        final BlockItem blockHeader = newBlockHeaderItem(10);
-        final BlockItem hugeItem = newBlockTxItem(3_000_000);
-        block.addItem(blockHeader);
-        block.addItem(hugeItem);
-        doReturn(block).when(bufferService).getBlockState(10);
+        final BlockNodeConfiguration config = connection.configuration();
+        // sanity check to make sure the sizes we are about to use are within the scope of the soft and hard limits
+        assertThat(config.messageSizeSoftLimitBytes()).isEqualTo(2_097_152L); // soft limit = 2 MB
+        assertThat(config.messageSizeHardLimitBytes()).isEqualTo(6_292_480L); // hard limit = 6 MB + 1 KB
 
-        connection.updateConnectionState(ConnectionState.ACTIVE);
-        // sleep to let the worker detect the state change and start doing work
-        sleep(150);
+        final BlockState block = new BlockState(10);
+        final BlockItem item1 = newBlockHeaderItem(10);
+        final BlockItem item2 = newBlockTxItem(5_000);
+        final BlockItem item3 = newBlockTxItem(5_000);
+        final BlockItem item4 = newBlockTxItem(3_001_500);
+        final BlockItem item5 = newBlockTxItem(255);
+        final BlockItem item6 = newBlockTxItem(1_950_000);
+        final BlockItem item7 = newBlockTxItem(1_750_000);
+        final BlockItem item8 = newBlockTxItem(25);
+        final BlockItem item9 = newBlockTxItem(9_002_875);
+
+        block.addItem(item1);
+        block.addItem(item2);
+        block.addItem(item3);
+        block.addItem(item4);
+        block.addItem(item5);
+        block.addItem(item6);
+        block.addItem(item7);
+        block.addItem(item8);
+        block.addItem(item9);
+        doReturn(block).when(bufferService).getBlockState(10);
+        lenient().when(bufferService.getEarliestAvailableBlockNumber()).thenReturn(10L);
+        lenient().when(bufferService.getHighestAckedBlockNumber()).thenReturn(-1L);
 
         final ArgumentCaptor<PublishStreamRequest> requestCaptor = ArgumentCaptor.forClass(PublishStreamRequest.class);
-        verify(requestPipeline, times(2)).onNext(requestCaptor.capture());
+        final Object worker = createWorker();
 
-        // there should be two requests: one for the block header and another for the EndStream
-        // the huge item should NOT be sent
-        assertThat(requestCaptor.getAllValues()).hasSize(2);
+        invokeDoWork(worker);
+        invokeDoWork(worker);
+        invokeDoWork(worker);
+        invokeDoWork(worker);
+        invokeDoWork(worker);
+        invokeDoWork(worker);
+
+        verify(requestPipeline, times(5)).onNext(requestCaptor.capture());
+
+        /*
+        There should be 5 requests:
+        Request 1: item 1, 2, and 3
+        Request 2: item 4
+        Request 3: item 5 and 6
+        Request 4: item 7 and 8
+        Request 5: EndStream.Error because item 8 was too big
+         */
+
+        assertThat(requestCaptor.getAllValues()).hasSize(5);
         final List<PublishStreamRequest> requests = requestCaptor.getAllValues();
-        assertRequestContainsItems(requests.getFirst(), blockHeader);
-        final PublishStreamRequest endStreamRequest = requests.get(1);
-        assertThat(endStreamRequest.hasEndStream()).isTrue();
-        final EndStream endStream = endStreamRequest.endStream();
+
+        final PublishStreamRequest req1 = requests.get(0);
+        assertThat(req1.blockItemsOrElse(BlockItemSet.DEFAULT).blockItems())
+                .hasSize(3)
+                .containsExactly(item1, item2, item3);
+        final PublishStreamRequest req2 = requests.get(1);
+        assertThat(req2.blockItemsOrElse(BlockItemSet.DEFAULT).blockItems())
+                .hasSize(1)
+                .containsExactly(item4);
+        final PublishStreamRequest req3 = requests.get(2);
+        assertThat(req3.blockItemsOrElse(BlockItemSet.DEFAULT).blockItems())
+                .hasSize(2)
+                .containsExactly(item5, item6);
+        final PublishStreamRequest req4 = requests.get(3);
+        assertThat(req4.blockItemsOrElse(BlockItemSet.DEFAULT).blockItems())
+                .hasSize(2)
+                .containsExactly(item7, item8);
+        final PublishStreamRequest req5 = requests.get(4);
+        assertThat(req5.hasEndStream()).isTrue();
+        final EndStream endStream = req5.endStream();
         assertThat(endStream).isNotNull();
         assertThat(endStream.endCode()).isEqualTo(EndStream.Code.ERROR);
 
-        verify(metrics).recordBlockItemsSent(1);
-        verify(metrics).recordRequestSent(RequestOneOfType.BLOCK_ITEMS);
+        verify(metrics, times(4)).recordRequestSent(RequestOneOfType.BLOCK_ITEMS);
         verify(metrics).recordRequestEndStreamSent(EndStream.Code.ERROR);
+
+        final ArgumentCaptor<Integer> metricItemsSentCaptor = ArgumentCaptor.forClass(Integer.class);
+        verify(metrics, times(4)).recordBlockItemsSent(metricItemsSentCaptor.capture());
+        int totalItems = 0;
+        for (final int count : metricItemsSentCaptor.getAllValues()) {
+            totalItems += count;
+        }
+        assertThat(totalItems).isEqualTo(8);
+
+        verify(metrics, times(6)).recordRequestExceedsHardLimit();
         verify(metrics).recordConnectionClosed();
         verify(metrics).recordActiveConnectionIp(-1L);
-        verify(metrics, times(2)).recordRequestLatency(anyLong());
+        verify(metrics, times(5)).recordRequestLatency(anyLong());
         verify(requestPipeline).onComplete();
-        verify(bufferService).getEarliestAvailableBlockNumber();
-        verify(bufferService).getHighestAckedBlockNumber();
+        verify(bufferService, times(6)).getEarliestAvailableBlockNumber();
+        verify(bufferService, times(6)).getHighestAckedBlockNumber();
+        verify(connectionManager).notifyConnectionClosed(connection);
+        verify(metrics, atLeastOnce()).recordStreamingBlockNumber(anyLong());
+        verify(metrics, atLeastOnce()).recordRequestBlockItemCount(anyInt());
+        verify(metrics, atLeastOnce()).recordRequestBytes(anyLong());
+
         verifyNoMoreInteractions(metrics);
         verifyNoMoreInteractions(requestPipeline);
+        verifyNoMoreInteractions(connectionManager);
         verifyNoMoreInteractions(bufferService);
-    }
-
-    @Test
-    void testWorkerConstructor_respectsMaxMessageSizeFromProtocolConfig() throws Exception {
-        // Provide a protocol config with a smaller max message size than the hard cap
-        final int configuredMax = 1_000_000;
-
-        // Recreate connection with a protocol config that sets a smaller max message size
-        final ConfigProvider configProvider = createConfigProvider(createDefaultConfigProvider());
-        final BlockNodeClientFactory localFactory = mock(BlockNodeClientFactory.class);
-        lenient()
-                .doReturn(grpcServiceClient)
-                .when(localFactory)
-                .createClient(any(WebClient.class), any(PbjGrpcClientConfig.class), any(RequestOptions.class));
-
-        final int maxBytes = configuredMax;
-        final BlockNodeProtocolConfig cfgWithMax = new BlockNodeProtocolConfig(nodeConfig.blockNodeConfig(), maxBytes);
-
-        connection = new BlockNodeConnection(
-                configProvider,
-                cfgWithMax,
-                connectionManager,
-                bufferService,
-                metrics,
-                executorService,
-                pipelineExecutor,
-                null,
-                localFactory);
-
-        // Ensure publish stream returns pipeline
-        lenient().doReturn(requestPipeline).when(grpcServiceClient).publishBlockStream(connection);
-
-        // Start the connection to trigger worker construction
-        final AtomicReference<Thread> workerThreadRef = workerThreadRef();
-        workerThreadRef.set(null);
-        connection.createRequestPipeline();
-        connection.updateConnectionState(ConnectionState.ACTIVE);
-
-        // Feed one item just over configuredMax to force fatal branch if limit not respected
-        final AtomicLong streamingBlockNumber = streamingBlockNumber();
-        streamingBlockNumber.set(5);
-        final BlockState block = new BlockState(5);
-        final BlockItem header = newBlockHeaderItem(5);
-        block.addItem(header);
-        // Slightly over configuredMax to ensure split/end if not honored
-        final BlockItem tooLarge = newBlockTxItem(configuredMax + 10);
-        block.addItem(tooLarge);
-        doReturn(block).when(bufferService).getBlockState(5);
-
-        // Allow worker loop to run
-        Thread.sleep(250);
-
-        // Should have sent header, then ended stream due to size violation under configured limit
-        verify(requestPipeline, atLeastOnce()).onNext(any(PublishStreamRequest.class));
-        verify(connectionManager).notifyConnectionClosed(connection);
     }
 
     // Tests that no response processing occurs when connection is already closed
@@ -1664,7 +1598,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         connection.updateConnectionState(ConnectionState.ACTIVE);
         final PublishStreamResponse response = createEndOfStreamResponse(Code.ERROR, 10L);
 
-        when(connectionManager.recordEndOfStreamAndCheckLimit(eq(nodeConfig.blockNodeConfig()), any()))
+        when(connectionManager.recordEndOfStreamAndCheckLimit(eq(nodeConfig), any()))
                 .thenReturn(true);
         when(connectionManager.getEndOfStreamScheduleDelay()).thenReturn(Duration.ofMinutes(5));
 
@@ -1675,7 +1609,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verify(metrics).recordEndOfStreamLimitExceeded();
         verify(metrics).recordConnectionClosed();
         verify(metrics).recordActiveConnectionIp(-1L);
-        verify(connectionManager).recordEndOfStreamAndCheckLimit(eq(nodeConfig.blockNodeConfig()), any());
+        verify(connectionManager).recordEndOfStreamAndCheckLimit(eq(nodeConfig), any());
         verify(connectionManager).rescheduleConnection(connection, Duration.ofMinutes(5), null, true);
         verify(requestPipeline).onComplete();
         verifyNoMoreInteractions(metrics);
@@ -1705,29 +1639,26 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verifyNoMoreInteractions(requestPipeline);
 
         // Verify connection is closed after handling EndOfStream
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
     }
 
-    // Tests EndOfStream BEHIND code with Long.MAX_VALUE edge case (should restart at block 0)
+    // Tests BehindPublisher code with Long.MAX_VALUE edge case (should restart at block 0)
     @Test
-    void testOnNext_endOfStream_blockNodeBehind_maxValueBlockNumber() {
+    void testOnNext_blockNodeBehind_maxValueBlockNumber() {
         openConnectionAndResetMocks();
-        final PublishStreamResponse response = createEndOfStreamResponse(Code.BEHIND, Long.MAX_VALUE);
+        final PublishStreamResponse response = createBlockNodeBehindResponse(Long.MAX_VALUE);
         when(bufferService.getBlockState(0L)).thenReturn(new BlockState(0L));
         connection.updateConnectionState(ConnectionState.ACTIVE);
 
         connection.onNext(response);
 
-        verify(metrics).recordLatestBlockEndOfStream(Long.MAX_VALUE);
-        verify(metrics).recordResponseEndOfStreamReceived(Code.BEHIND);
-        verify(requestPipeline).onComplete();
-        verify(connectionManager)
-                .rescheduleConnection(connection, null, 0L, false); // Should restart at 0 for MAX_VALUE
+        verify(metrics).recordLatestBlockBehindPublisher(Long.MAX_VALUE);
+        verify(metrics).recordResponseReceived(ResponseOneOfType.NODE_BEHIND_PUBLISHER);
         verify(bufferService).getBlockState(0L);
-        verify(metrics).recordConnectionClosed();
-        verify(metrics).recordActiveConnectionIp(-1L);
         verifyNoMoreInteractions(metrics);
         verifyNoMoreInteractions(requestPipeline);
+        verifyNoMoreInteractions(connectionManager);
+        verifyNoMoreInteractions(bufferService);
     }
 
     // Tests stream failure handling without calling onComplete on the pipeline
@@ -1738,7 +1669,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
         connection.handleStreamFailureWithoutOnComplete();
 
-        final ConnectionState postState = connection.getConnectionState();
+        final ConnectionState postState = connection.currentState();
         assertThat(postState).isEqualTo(ConnectionState.CLOSED);
 
         // Should not call onComplete on the pipeline
@@ -1760,15 +1691,15 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verifyNoInteractions(bufferService);
     }
 
-    // Tests error handling in PENDING state (should not call onComplete on pipeline)
+    // Tests error handling in READY state (should not call onComplete on pipeline)
     @Test
-    void testOnError_connectionPending() {
+    void testOnError_connectionReady() {
         openConnectionAndResetMocks();
-        connection.updateConnectionState(ConnectionState.PENDING);
+        connection.updateConnectionState(ConnectionState.READY);
 
         connection.onError(new RuntimeException("test error"));
 
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
 
         verify(metrics).recordConnectionOnError();
         verify(metrics).recordConnectionClosed();
@@ -1784,12 +1715,12 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
     @Test
     void testOnError_connectionUninitialized() {
         // Connection starts in UNINITIALIZED state by default
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.UNINITIALIZED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.UNINITIALIZED);
 
         connection.onError(new RuntimeException("test error"));
 
         // Should transition to CLOSED state after handling the error
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
 
         verify(metrics).recordConnectionOnError();
         verify(connectionManager).rescheduleConnection(connection, Duration.ofSeconds(30), null, true);
@@ -1817,7 +1748,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verify(requestPipeline).onNext(any(PublishStreamRequest.class));
         verify(requestPipeline).onComplete();
 
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
     }
 
     // Tests client-side end stream handling (should have no side effects)
@@ -1825,12 +1756,12 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
     void testClientEndStreamReceived() {
         // This method calls the superclass implementation - test that it doesn't throw exceptions
         // and doesn't change connection state or interact with dependencies
-        final ConnectionState initialState = connection.getConnectionState();
+        final ConnectionState initialState = connection.currentState();
 
         connection.clientEndStreamReceived();
 
         // Verify state unchanged and no side effects
-        assertThat(connection.getConnectionState()).isEqualTo(initialState);
+        assertThat(connection.currentState()).isEqualTo(initialState);
         verifyNoInteractions(metrics);
         verifyNoInteractions(requestPipeline);
         verifyNoInteractions(connectionManager);
@@ -1853,17 +1784,17 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
     // Tests connection state transition from ACTIVE to other states (should cancel reset task)
     @Test
-    void testUpdateConnectionState_fromActiveToOther() {
+    void testUpdateStatus_fromActiveToOther() {
         openConnectionAndResetMocks();
         connection.updateConnectionState(ConnectionState.ACTIVE);
 
         // Reset mocks to focus on the state change
         reset(executorService);
 
-        // Change from ACTIVE to PENDING should cancel stream reset
-        connection.updateConnectionState(ConnectionState.PENDING);
+        // Change from ACTIVE to CLOSING should cancel stream reset
+        connection.updateConnectionState(ConnectionState.CLOSING);
 
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.PENDING);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSING);
         verifyNoInteractions(executorService); // No new scheduling should happen
     }
 
@@ -1914,7 +1845,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
                         eq(ONCE_PER_DAY_MILLIS),
                         eq(TimeUnit.MILLISECONDS));
 
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.ACTIVE);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.ACTIVE);
     }
 
     // Tests rescheduling when existing stream reset task is already done (should not cancel)
@@ -1964,7 +1895,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
                         eq(ONCE_PER_DAY_MILLIS),
                         eq(TimeUnit.MILLISECONDS));
 
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.ACTIVE);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.ACTIVE);
     }
 
     // Tests cancellation of stream reset task when transitioning away from ACTIVE state
@@ -1993,12 +1924,12 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
         // Now change to a non-ACTIVE state to trigger cancelStreamReset()
         // This should cover: if (streamResetTask != null) { streamResetTask.cancel(false); ... }
-        connection.updateConnectionState(ConnectionState.PENDING);
+        connection.updateConnectionState(ConnectionState.CLOSING);
 
         // Verify the task was cancelled
         verify(mockTask).cancel(false);
 
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.PENDING);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSING);
     }
 
     // Tests execution of periodic stream reset task (should reset stream and close connection)
@@ -2029,7 +1960,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verify(requestPipeline).onNext(any(PublishStreamRequest.class));
         verify(requestPipeline).onComplete();
 
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
     }
 
     // Tests that periodic reset task does nothing when connection is not ACTIVE
@@ -2047,8 +1978,8 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
                         eq(ONCE_PER_DAY_MILLIS),
                         eq(TimeUnit.MILLISECONDS));
 
-        // Change state to PENDING before executing reset
-        connection.updateConnectionState(ConnectionState.PENDING);
+        // Change state to CLOSING before executing reset
+        connection.updateConnectionState(ConnectionState.CLOSING);
         reset(connectionManager, bufferService, requestPipeline);
 
         // Execute the periodic reset
@@ -2072,7 +2003,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         connection.updateConnectionState(ConnectionState.ACTIVE);
 
         final PublishStreamRequest request = createRequest(newBlockHeaderItem());
-        connection.sendRequest(request);
+        sendRequest(new BlockItemsStreamRequest(request, 1L, 1, 1, false, false));
 
         // Verify the request was sent successfully
         verify(requestPipeline).onNext(request);
@@ -2084,7 +2015,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verify(metrics, times(0)).recordPipelineOperationTimeout();
 
         // Connection should still be ACTIVE
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.ACTIVE);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.ACTIVE);
     }
 
     /**
@@ -2099,7 +2030,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         final PublishStreamRequest request = createRequest(newBlockHeaderItem());
 
         // Since connection is not ACTIVE, sendRequest should not do anything
-        connection.sendRequest(request);
+        sendRequest(new BlockItemsStreamRequest(request, 1L, 1, 1, false, false));
 
         // Verify no interactions since connection is not ACTIVE
         verifyNoInteractions(requestPipeline);
@@ -2124,7 +2055,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verify(metrics).recordActiveConnectionIp(-1L);
 
         // Connection should be CLOSED
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
     }
 
     /**
@@ -2145,7 +2076,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verify(metrics).recordActiveConnectionIp(-1L);
 
         // Connection should be CLOSED
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
     }
 
     /**
@@ -2163,7 +2094,8 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         final PublishStreamRequest request = createRequest(newBlockHeaderItem());
 
         // Should throw RuntimeException wrapped by the executor
-        final RuntimeException exception = catchRuntimeException(() -> connection.sendRequest(request));
+        final RuntimeException exception =
+                catchRuntimeException(() -> sendRequest(new BlockItemsStreamRequest(request, 1L, 1, 1, false, false)));
 
         assertThat(exception).isNotNull();
         // Exception gets wrapped when executed in virtual thread executor
@@ -2189,14 +2121,11 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         connection.close(true);
 
         // Verify connection is closed
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
-
-        // Give the executor a moment to shutdown
-        Thread.sleep(100);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
 
         // Try to send a request after close - should be ignored since connection is CLOSED
         final PublishStreamRequest request = createRequest(newBlockHeaderItem());
-        connection.sendRequest(request);
+        sendRequest(new BlockItemsStreamRequest(request, 1L, 1, 1, false, false));
 
         // Verify that the pipeline was NOT called (executor should be shut down and connection is CLOSED)
         verify(requestPipeline, times(1)).onComplete(); // Only from the close() call
@@ -2228,7 +2157,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         final PublishStreamRequest request = createRequest(newBlockHeaderItem());
 
         // Send request - should trigger timeout handling immediately
-        connection.sendRequest(request);
+        sendRequest(new BlockItemsStreamRequest(request, 1L, 1, 1, false, false));
 
         // Verify timeout was detected and handled
         // Note: future.get() is called twice - once for sendRequest (times out)
@@ -2242,7 +2171,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verify(connectionManager).rescheduleConnection(eq(connection), eq(Duration.ofSeconds(30)), eq(null), eq(true));
 
         // Connection should be CLOSED after timeout
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
     }
 
     /**
@@ -2272,50 +2201,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verify(metrics).recordConnectionClosed();
 
         // Connection should still be CLOSED despite timeout
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
-    }
-
-    /**
-     * Tests InterruptedException handling when pipeline.onComplete() is interrupted during close.
-     * Uses mocks to simulate an interruption without actually waiting, making the test fast.
-     */
-    @Test
-    void testClose_onCompleteInterruptedException() throws Exception {
-        openConnectionAndResetMocks();
-        connection.updateConnectionState(ConnectionState.ACTIVE);
-
-        // Create a mock Future that will throw InterruptedException when get() is called
-        @SuppressWarnings("unchecked")
-        final Future<Object> mockFuture = mock(Future.class);
-        when(mockFuture.get(anyLong(), any(TimeUnit.class)))
-                .thenThrow(new InterruptedException("Simulated interruption"));
-
-        // Set up the pipelineExecutor to return mock future
-        doReturn(mockFuture).when(pipelineExecutor).submit(any(Runnable.class));
-
-        // Close connection in a separate thread to verify interrupt status is restored
-        final AtomicBoolean isInterrupted = new AtomicBoolean(false);
-        final CountDownLatch latch = new CountDownLatch(1);
-        Thread.ofVirtual().start(() -> {
-            try {
-                connection.close(true);
-            } finally {
-                isInterrupted.set(Thread.currentThread().isInterrupted());
-                latch.countDown();
-            }
-        });
-
-        // Wait for the close operation to complete
-        assertThat(latch.await(5, TimeUnit.SECONDS)).isTrue();
-
-        // Verify interruption was handled gracefully
-        verify(mockFuture).get(anyLong(), any(TimeUnit.class));
-        verify(metrics).recordConnectionClosed();
-
-        // Connection should still be CLOSED despite interruption
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
-
-        assertThat(isInterrupted.get()).isTrue();
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
     }
 
     /**
@@ -2344,66 +2230,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verify(metrics).recordConnectionClosed();
 
         // Connection should still be CLOSED despite interruption
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
-    }
-
-    /**
-     * Tests InterruptedException handling during pipeline operation.
-     */
-    @Test
-    void testSendRequest_interruptedException() {
-        openConnectionAndResetMocks();
-        connection.updateConnectionState(ConnectionState.ACTIVE);
-
-        // Create a latch to coordinate the test
-        final CountDownLatch latch = new CountDownLatch(1);
-        final AtomicReference<RuntimeException> exceptionRef = new AtomicReference<>();
-
-        // Make the pipeline block until interrupted
-        doAnswer(invocation -> {
-                    try {
-                        latch.await();
-                    } catch (InterruptedException e) {
-                        Thread.currentThread().interrupt();
-                        throw new RuntimeException("Interrupted", e);
-                    }
-                    return null;
-                })
-                .when(requestPipeline)
-                .onNext(any());
-
-        final PublishStreamRequest request = createRequest(newBlockHeaderItem());
-
-        // Send request in a separate thread
-        final Thread testThread = Thread.ofVirtual().start(() -> {
-            try {
-                connection.sendRequest(request);
-            } catch (RuntimeException e) {
-                exceptionRef.set(e);
-            }
-        });
-
-        // Give the thread time to start and block
-        try {
-            Thread.sleep(100);
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-        }
-
-        // Interrupt the thread
-        testThread.interrupt();
-
-        // Wait for thread to complete
-        try {
-            testThread.join(2000);
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-        }
-
-        // Verify exception was thrown
-        assertThat(exceptionRef.get()).isNotNull();
-        assertThat(exceptionRef.get().getMessage()).contains("Interrupted while waiting for pipeline.onNext()");
-        assertThat(exceptionRef.get().getCause()).isInstanceOf(InterruptedException.class);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
     }
 
     /**
@@ -2420,9 +2247,10 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         doThrow(new RuntimeException("Execution failed")).when(requestPipeline).onNext(any());
 
         final PublishStreamRequest request = createRequest(newBlockHeaderItem());
+        final BlockItemsStreamRequest bisReq = new BlockItemsStreamRequest(request, 10L, 1, 1, false, false);
 
         // Should throw RuntimeException wrapping ExecutionException
-        final RuntimeException exception = catchRuntimeException(() -> connection.sendRequest(request));
+        final RuntimeException exception = catchRuntimeException(() -> sendRequest(bisReq));
 
         assertThat(exception).isNotNull();
         assertThat(exception.getMessage()).contains("Error executing pipeline.onNext()");
@@ -2443,7 +2271,7 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
         // Close the connection first time
         connection.close(true);
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
 
         // Reset mocks to verify second close behavior
         reset(requestPipeline, metrics, connectionManager);
@@ -2457,13 +2285,13 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         verifyNoInteractions(connectionManager);
 
         // Connection should still be CLOSED
-        assertThat(connection.getConnectionState()).isEqualTo(ConnectionState.CLOSED);
+        assertThat(connection.currentState()).isEqualTo(ConnectionState.CLOSED);
     }
 
     // Utilities
 
     private void openConnectionAndResetMocks() {
-        connection.createRequestPipeline();
+        connection.initialize();
         // reset the mocks interactions to remove tracked interactions as a result of starting the connection
         resetMocks();
     }
@@ -2479,10 +2307,6 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
 
     private AtomicLong streamingBlockNumber() {
         return (AtomicLong) streamingBlockNumberHandle.get(connection);
-    }
-
-    private AtomicLong streamingBlockNumber(final BlockNodeConnection conn) {
-        return (AtomicLong) streamingBlockNumberHandle.get(conn);
     }
 
     @SuppressWarnings("unchecked")
@@ -2515,7 +2339,56 @@ class BlockNodeConnectionTest extends BlockNodeCommunicationTestBase {
         }
     }
 
-    private static void sleep(final long millis) throws InterruptedException {
-        Thread.sleep(millis);
+    /**
+     * Helper method to create a ConnectionWorkerLoopTask instance using reflection.
+     * The worker task is an inner class of BlockNodeConnection.
+     *
+     * @return a new ConnectionWorkerLoopTask instance
+     * @throws Exception if reflection fails
+     */
+    private Object createWorker() throws Exception {
+        Class<?> workerClass = null;
+        for (Class<?> innerClass : BlockNodeConnection.class.getDeclaredClasses()) {
+            if (innerClass.getSimpleName().equals("ConnectionWorkerLoopTask")) {
+                workerClass = innerClass;
+                break;
+            }
+        }
+        if (workerClass == null) {
+            throw new IllegalStateException("ConnectionWorkerLoopTask inner class not found");
+        }
+
+        final Constructor<?> constructor = workerClass.getDeclaredConstructor(BlockNodeConnection.class);
+        constructor.setAccessible(true);
+        return constructor.newInstance(connection);
+    }
+
+    /**
+     * Helper method to invoke the doWork() method on a ConnectionWorkerLoopTask instance
+     * using reflection.
+     *
+     * @param worker the worker instance (from createWorker())
+     * @throws Exception if reflection or doWork() execution fails
+     */
+    private void invokeDoWork(final Object worker) throws Exception {
+        final Method doWorkMethod = worker.getClass().getDeclaredMethod("doWork");
+        doWorkMethod.setAccessible(true);
+        doWorkMethod.invoke(worker);
+    }
+
+    private void sendRequest(final StreamRequest request) {
+        sendRequest(connection, request);
+    }
+
+    private void sendRequest(final BlockNodeConnection connection, final StreamRequest request) {
+        try {
+            sendRequestHandle.invoke(connection, request);
+        } catch (final Throwable e) {
+            if (e instanceof final RuntimeException re) {
+                throw re;
+            } else {
+                throw new RuntimeException(e);
+            }
+        }
     }
 }
